Rahti/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route
  namespace: aps
spec:
  host: assignment-2-aps.2.rahtiapp.fi
  path: /api
  to:
    kind: Service
    name: backend
  port:
    targetPort: 8000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
